# codewars

./: README.md
codewars-py/: pyproject.toml
codewars-py/codewars_py/src/: array_diff.py  cakes.py  determinant.py  digital_root.py  disemvowel.py  est_subsets.py  find_it.py  first_non_repeating_letter.py  likes.py  max_sequence.py  move_zeros.py  perfect_square.py  persistence.py  pig_it.py  remov_nb.py  same_structure_as.py  solution.py  solve_runes.py  sum_pairs.py  unique_in_order.py  valid_parentheses.py
codewars-py/tests/src/: test_array_diff.py  test_cakes.py  test_determinant.py  test_disemvowel.py  test_likes.py  test_max_sequence.py  test_solution.py  test_solve_runes.py  test_sum_pairs.py  test_unique_in_order.py  test_valid_parentheses.py  utils.py
codewars-rust/: Cargo.toml
